Temporarily fix the scrollbar appearing at the x-axis

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -1,3 +1,18 @@
+/*
+    This temporarily fixes a bug where the scrollbar 
+    at the x-axis appears. The cause is yet to be determined.
+
+    If you found the cause, please submit an issue on our GitHub
+    repository to notify the developers responsible for
+    maintaining the website.
+
+    Author: Keane Emanuel E. Dalisay
+    Last Updated: May 10, 2024
+*/
+body {
+    overflow-x: hidden; 
+}
+
 main {
     margin-bottom: 125px;
 }
